2005-02-16  Jan Schmidt  <thaytan@mad.scientist.com>

	* sys/ximage/ximagesink.c: (gst_ximagesink_chain),
	(gst_ximagesink_send_pending_navigation),
	(gst_ximagesink_navigation_send_event), (gst_ximagesink_finalize),
	(gst_ximagesink_init):
	* sys/ximage/ximagesink.h:
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_chain),
	(gst_xvimagesink_send_pending_navigation),
	(gst_xvimagesink_navigation_send_event),
	(gst_xvimagesink_finalize), (gst_xvimagesink_init):
	* sys/xvimage/xvimagesink.h:
	  Use a mutex protected list to marshal navigation
	  events into the stream thread from whichever thread
	  sends them.

2005-02-15  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/speed/demo-mp3.c: (time_tick_cb), (main):
	  Display current position and track length; misc. clean-ups.
	  
	* gst/speed/gstspeed.c: (speed_get_query_types), (speed_src_query),
	(speed_init), (speed_chain):
	  Add query function, so that the stream length and current position
	  get adjusted when queried (note that current position queries may
	  still be wrong if the audio sink returns values based on buffer
	  timestamps instead of passing on the query).

2005-02-13  Benjamin Otte  <otte@gnome.org>

	* gst/audioconvert/gstaudioconvert.c: (gst_audio_convert_link),
	(gst_audio_convert_channels):
	  create channel conversion matrix when linking
	* gst/audioconvert/.cvsignore:
	* gst/audioconvert/Makefile.am:
	* gst/audioconvert/channelmixtest.c: (main):
	  add (ugly) test that ensures stereo <=> mono conversion works
	  correctly

2005-02-13  Benjamin Otte  <otte@gnome.org>

	* gst/audioconvert/gstchannelmix.h:
	  include missing header file
	* gst/audioconvert/gstchannelmix.c:
	(gst_audio_convert_fill_compatible):
	  use same sign for both channels when converting to/from compatible
	  channel. Previously used different signs made the signals cancel
	  each other out and appear like silence. (fixes #167269)

2005-02-12  Tim-Philipp Müller  <tim at centricular dot net>
