@@ -1,3 +1,8 @@
+2005-02-15  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_populate):
+	  Granpos can apparently be -1, which screws up calculations...
+
 2005-02-16  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* sys/ximage/ximagesink.c: (gst_ximagesink_chain),
